# handover

./: .dockerignore  .env.example  .gitignore  .secrets.example  Dockerfile  Dockerfile.chainlit  Dockerfile.dev  Dockerfile.prod  IaC_example.py  README.md  confluence_ingested.jsonl  deploy.yml  docker-compose.yml  main.py  pyproject.toml  traverse_confluence.py
.github/: deploy-config.json
.github/workflows/: bootstrap-aws.yml  deploy-api.yml  deploy-chainlit.yml  deploy-ecs-reusable.yml  enforce-dev-to-main.yml  promote-dev-to-main.yml
examples/: IaC_example.py  aws_bedrock.py  chainlit_demo.py  confluence_ingest.py  demo.py  demo_provider.py  demo_utils.py  graph.py  orchestrator.py  orchestrator_old.py
infra/cloudformation/: README.md  cicd.parameters.example.json  cicd.parameters.handoff.json  cicd.yaml  network.parameters.example.json  network.parameters.handoff.json  network.yaml  runtime.parameters.example.json  runtime.parameters.handoff.json  runtime.yaml
notebooks/: playground.ipynb
src/: api.py
src/graph/nodes/: __init__.py
src/graph/tools/: __init__.py
src/llm/: __init__.py
src/ruter_chatbot/: api.py  chainlit_app.py  logger.py  orchestrator.py
src/ruter_chatbot/graph/: __init__.py  graph_builder.py  node_builder.py  node_registry.py  policy.py  router_registry.py
src/ruter_chatbot/llm/: demo.py  model.py  model_registry.py  model_runtime.py  pipeline.py  pipeline_registry.py  pipeline_runtime.py
src/ruter_chatbot/specs/: __init__.py  app.py  chunker.py  chunkers.py  (+10 more)
src/specs/: edge_conditions.py  state.py
src/stores/: __init__.py
(+69 files in other folders)
