[project]
name = "ruter-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "boto3>=1.42.68",
    "faiss-cpu>=1.13.2",
    "langchain-aws>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.0.10",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "chromadb>=1.5.2",
    "ipywidgets>=8.1.8",
    "langchain-ollama>=1.0.1",
    "notebook>=7.5.4",
]
prod = ["fastapi>=0.135.1", "uvicorn>=0.41.0"]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
